--- a/web/css/colors.less
+++ b/web/css/colors.less
@@ -42,6 +42,7 @@
 @fly-light-utility-ui-element-active:	rgb(@color-neutral-100);
 @fly-light-button-live-background:      rgb(204,14,0);
 @fly-light-button-live-text:            rgb(@color-neutral-white);
+@fly-light-utility-status-alert:		#e10500;
 
 /* FLY DARK */
 
@@ -62,6 +63,7 @@
 @fly-dark-utility-icon-primary:			rgb(@color-neutral-0);
 @fly-dark-utility-ui-background:		rgb(@color-neutral-100);
 @fly-dark-utility-ui-element-active:	rgb(@color-neutral-0);
+@fly-dark-utility-status-alert:			#e10500;
 
 /* FLY DYNAMIC */
 
@@ -81,6 +83,7 @@
 @fly-dynamic-utility-icon-primary:		rgba(@color-neutral-white,1);
 @fly-dynamic-utility-ui-background:		rgba(@color-neutral-white,0);
 @fly-dynamic-utility-ui-element-active:	rgb(@color-neutral-white);
+@fly-dynamic-utility-status-alert:		#e10500;
 
 /* THIRD PARTY */
 
